tests/pos/T1045a.hs
module T1045a where

import {-# SOURCE #-} T1045

bar = foo
