tests/neg/Client.hs
module Client where

import Lib

bar = foo 1

